--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,11 +17,11 @@ spec:
         image: nginx:1.14.2
         ports:
         - containerPort: 80
-        volumeMounts:
-          - name: foo
-            mountPath: "/etc/foo"
-      volumes:
-      - name: foo
-        secret:
-          secretName: mysecret
+#        volumeMounts:
+#          - name: foo
+#            mountPath: "/etc/foo"
+#      volumes:
+#      - name: foo
+#        secret:
+#          secretName: mysecret
 
