--- a/mychart/templates/mysecret.yaml
+++ b/mychart/templates/mysecret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: default
 data:
   username: YWRtaW4=
-  password: {{ .Values.password | b64enc | quote }}
+#  password: {{ .Values.password | b64enc | quote }}
 type: Opaque
