--- a/application.yaml
+++ b/application.yaml
@@ -1,22 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: gitlab-exporter-instance
   namespace: default
 spec:
   project: default
 
   source:
-    repoURL: https://github.com/furmanyk/argocd
-    targetRevision: HEAD
-    path: mychart
-    plugin:
-      name: helmSecrets
-      env:
-        - name: HELM_OPTS
-          value: "secrets/secrets.password.yaml"
-        - name: RELEASE_NAME
-          value: "mychart"
+    repoURL: "git@git.ringcentral.com:rcvdevops/kubernetes/instances/gitlab-ci-pipelines-exporter-instance.git"
+    targetRevision: "implementation"
+    path: .
+  values:
+    gitlab-ci-pipelines-exporter:
+      imagePullSecrets:
+        - name: "docker-registry"
+
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
